Added Security page

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                       </div>
                   </li>
                   <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
-                    <a class="nav-link" href="index.html#whitepaper">Security</a>
+                    <a class="nav-link" href="security.html">Security</a>
                 </li>
                   <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
                       <a class="nav-link" href="index.html#whitepaper">Whitepaper</a>
@@ -849,23 +849,23 @@
 		<div class="max-w-screen-2xl mx-auto px-8 lg:px-20">
 			<div class="grid md:grid-cols-2 gap-24">
 				<div>
-					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl">An Open Source Project</h3>
-					<p class="text-gray-600 mt-12 text-lg 2xl:text-2xl font-display font-medium leading-normal">Entirely open source and made by contributors around the world. Developers, designers, creators, educators, enthusiasts, and more have free and open access to the repos, assets, and information. Designed to be censorship resistant and free from third party control.</p>
+					<h3 style="color: #fff; margin-left: -85px;" class="font-display text-4xl  2xl:text-6xl animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">An Open Source Project</h3>
+					<p style="color: #fff;"  class="text-gray-600 mt-12 text-lg text-left 2xl:text-2xl font-display font-medium leading-normal animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Entirely open source and made by contributors around the world. Developers, designers, creators, educators, enthusiasts, and more have free and open access to the repos, assets, and information. Designed to be censorship resistant and free from third party control.</p>
 					<ul class="flex flex-col md:flex-row md:items-center -ml-12">
-						<li class="mt-12 ml-12">
-							<a href="https://github.com/PCN-Protocol" class="inline-flex items-center text-primary-base text-lg 2xl:text-2xl font-semibold font-special">
+						<li class="ml-12">
+							<a style="margin-left: -40px;" href="https://github.com/PCN-Protocol" class="inline-flex items-center text-primary-base  2xl:text-2xl font-semibold font-special animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
                                 <img src="./theme-assets/images/developers-img.svg">
-								<span class="ml-4">Developers</span>
+								<span style="margin-left: 0.5rem;">Developers</span>
 							</a>
 						</li>
 					</ul>
 				</div>
 				<div class="pb-32 md:pb-0">
-					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Mission & Principles</h3>
-					<p class="text-gray-600 mt-12 text-lg 2xl:text-2xl font-display font-medium leading-normal">PCNP strives to be a secure communication tool that upholds human rights. Designed to enable the free flow of information, protect the right to private, secure conversations, and promote the sovereignty of individuals.</p>
-					<a href="our-mission.html" class="group inline-flex group items-center text-primary-base text-lg 2xl:text-2xl font-semibold font-special mt-12">
+					<h3 style="color: #fff; margin-left: -160px;" class="font-display text-4xl  2xl:text-6xl animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Mission & Principles</h3>
+					<p style="color: #fff;" class="text-gray-600 mt-12 text-left text-lg 2xl:text-2xl font-display font-medium leading-normal animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">PCNP strives to be a secure communication tool that upholds human rights. Designed to enable the free flow of information, protect the right to private, secure conversations, and promote the sovereignty of individuals.</p>
+					<a style="margin-left: -400px;" href="our-mission.html" class="group inline-flex group items-center text-primary-base  font-semibold font-special animated" data-animation="fadeInUpShorter" data-animation-delay="0.7s">
 						Learn More
-						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="./theme-assets/images/icon-arrow-right-white.svg">
+						<span style="margin-left: 0.5rem;" class=" group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="./theme-assets/images/icon-arrow-right-white.svg">
 					</a>
 				</div>
 			</div>
