--- a/Account-Generation.html
+++ b/Account-Generation.html
@@ -121,7 +121,7 @@
 						  <a class="dropdown-item" href="Private-Messenger.html">Private Messenger</a>
 						  <a class="dropdown-item" href="Account-Generation.html">Account Generation</a>
 						  <a class="dropdown-item" href="Secure-Crypto-Wallet.html">Secure Crypto Wallet</a>
-						  <a class="dropdown-item" href="keygard.html">Keycard</a>
+						  <a class="dropdown-item" href="keygard.html">KeyPass</a>
 						  <a class="dropdown-item" href="Web3-Browser.html">Web3 Browser</a>
 						  <a class="dropdown-item" href="VPN.html">VPN</a>
 					  </div>
@@ -145,8 +145,7 @@
 						  <a class="dropdown-item" href="index.html#team">Team</a>
 						  <a class="dropdown-item" href="index.html#faq">FAQ</a>
 						  <a class="dropdown-item" href="index.html#contact">Contact</a>
-						  <a class="dropdown-item" href="template-404.html">404</a>
-						  <a class="dropdown-item" href="template-inner-page-with-sidebar.html">Sample Page</a>
+						  <a class="dropdown-item" href="jobs.html">Jobs</a>
 					  </div>
 				  </li>
 				  <li class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
@@ -175,6 +174,8 @@
      	<!--MESSENGER-INTRO-->
 	<!--ACCOUNT-CREATION-INTRO-->
 	<section style="margin-top: 80px; margin-left: 30px;"  class="pt-16 xl:pt-0">
+		<div id="particles-js"></div>
+		
 		<div class="max-w-screen-2xl mx-auto lg:px-12">
 			<div class="grid md:grid-cols-2">
 				<div class="relative px-8 self-center xl:mb-32">
@@ -320,11 +321,11 @@
 				<div class="col-md-4">
 					<div class="about">
 						<div class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">
-							<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="width: 65px; height: 55px; margin-left: -20px; margin-bottom: 8px;" src="theme-assets/images/pcn0- Copy.png" alt="Logo">
-							<p style="margin-left: 45px; margin-top: -50px; color: #fff; font-size: 1.9rem !important;" class="logo-text">PCN Protocol</p>
+							<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="width: 65px; height: 55px; margin-left: -20px; margin-bottom: 8px;" src="theme-assets/images/pcnLOGO.svg" alt="Logo">
+							<p style="margin-left: 45px; margin-top: -50px; color: #fff; font-size: 1.9rem !important;" class="logo-text animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">PCN Protocol</p>
 						</div>
 						<div class="about-text animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
-							<p style="font-size: 1.3rem !important;" class="grey-accent2 animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">PCN Protocol is a blockchain platform that allows users to make payments, create and request loans and crowdfund projects.</p>
+							<p style="font-size: 1.3rem !important;" class="grey-accent2 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">PCN Protocol is a blockchain platform that allows users to make payments, create and request loans and crowdfund projects.</p>
 						</div>
 						<ul style="font-size: 30px;" class="social-buttons list-unstyled mb-5">
 							<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s"><a style="font-size: 18px;" href="https://www.facebook.com/PCNProtocol/" target="_blank" title="Facebook" class="btn font-medium"><i class="ti-facebook"></i></a></li>
@@ -338,16 +339,16 @@
 				</div>
 				<div class="col-md-4">
 					<div class="links">
-						<h5 style="font-size: 1.9rem ; margin-top: 10px;" class="title animated" data-animation="fadeInUpShorter"  data-animation-delay="0.5s">Useful Links</h5>
-						<ul style="font-size: 1.3rem !important;" class="useful-links float-left mr-5 animated" data-animation="fadeInUpShorter"  data-animation-delay="0.9s">
-							<li class="animated"   data-animation-delay="0.7s"><a href="index.html#about">About</a></li>
-							<li class="animated"   data-animation-delay="0.8s"><a href="index.html#token-sale-mobile-app">Token Sale</a></li>
-							<li class="animated"  data-animation-delay="0.9s"><a href="#index.html#whitepaper">Whitepaper </a></li>
+						<h5 style="font-size: 1.9rem ; margin-top: 10px;" class="title animated"  data-animation-delay="0.5s">Useful Links</h5>
+						<ul style="font-size: 1.3rem !important;" class="useful-links float-left mr-5">
+							<li class="animated"  data-animation-delay="0.6s"><a href="index.html#about">About</a></li>
+							<li class="animated"  data-animation-delay="0.7s"><a href="index.html#token-sale-mobile-app">Token Sale</a></li>
+							<li class="animated"  data-animation-delay="0.8s"><a href="#index.html#whitepaper">Whitepaper </a></li>
 						</ul>
-						<ul style="font-size: 1.3rem !important;" class="useful-links animated " data-animation="fadeInUpShorter"  data-animation-delay="0.5s">
-							<li class="animated"   data-animation-delay="0.6s"><a href="#">Roadmap</a></li>
-							<li class="animated"   data-animation-delay="0.6s"><a href="#">Team</a></li>
-							<li class="animated"   data-animation-delay="0.6s"><a href="#">Sign in</a></li>
+						<ul style="font-size: 1.3rem !important;" class="useful-links">
+							<li class="animated"  data-animation-delay="0.9s"><a href="#">Roadmap</a></li>
+							<li class="animated"  data-animation-delay="1.0s"><a href="#">Team</a></li>
+							<li class="animated"  data-animation-delay="1.1s"><a href="#">Sign in</a></li>
 						</ul>
 					</div>
 				</div>
@@ -362,7 +363,7 @@
 				</div>
 			</div>
 			<div class="copy-right mx-auto text-center">
-				<span style="font-size: 1.3rem !important;" class="copyright">Copyright &copy; 2019, PCN Protocol. Template Designed by <a href="http://pixinvent.com" title="pixinvent" class="white animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Pixinvent</a></span>
+				<span style="font-size: 1.3rem !important;" class="copyright">Copyright &copy; 2019, PCN Protocol. Template Designed by <a href="http://pixinvent.com" title="pixinvent" class="white">Pixinvent</a></span>
 			</div>
 		</div>
 	</div>
@@ -375,12 +376,14 @@
 
 
     <!-- BEGIN VENDOR JS-->
+	
     <script src="theme-assets/vendors/vendors.min.js"></script>
     <!-- BEGIN VENDOR JS-->
     <!-- BEGIN PAGE VENDOR JS-->
     <script src="theme-assets/vendors/flipclock/flipclock.min.js"></script>
     <script src="theme-assets/vendors/swiper/js/swiper.min.js"></script>
     <script src="theme-assets/vendors/particles.min.js"></script>
+	
     <script src="theme-assets/vendors/waypoints/jquery.waypoints.min.js"></script>
     <!-- END PAGE VENDOR JS-->
     <!-- BEGIN THEME JS-->
@@ -389,6 +392,7 @@
     <!-- END CRYPTO JS-->
     <!-- BEGIN PAGE LEVEL JS-->
     <script src="theme-assets/js/scripts/particles-type1.js"></script>
+
     <!-- END PAGE LEVEL JS-->
 </body>
 </html>
