--- a/Private-messenger.html
+++ b/Private-messenger.html
@@ -117,7 +117,7 @@
 						  <a class="dropdown-item" href="Private-Messenger.html">Private Messenger</a>
 						  <a class="dropdown-item" href="Account-Generation.html">Account Generation</a>
 						  <a class="dropdown-item" href="Secure-Crypto-Wallet.html">Secure Crypto Wallet</a>
-						  <a class="dropdown-item" href="keygard.html">Keycard</a>
+						  <a class="dropdown-item" href="keygard.html">KeyPass</a>
 						  <a class="dropdown-item" href="Web3-Browser.html">Web3 Browser</a>
 						  <a class="dropdown-item" href="VPN.html">VPN</a>
 					  </div>
@@ -141,8 +141,7 @@
 						  <a class="dropdown-item" href="index.html#team">Team</a>
 						  <a class="dropdown-item" href="index.html#faq">FAQ</a>
 						  <a class="dropdown-item" href="index.html#contact">Contact</a>
-						  <a class="dropdown-item" href="template-404.html">404</a>
-						  <a class="dropdown-item" href="template-inner-page-with-sidebar.html">Sample Page</a>
+						  <a class="dropdown-item" href="jobs.html">Jobs</a>
 					  </div>
 				  </li>
 				  <li class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
@@ -400,7 +399,7 @@ Benefits -->
             <div class="col-md-4">
                 <div class="about">
                     <div class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">
-                        <img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="width: 65px; height: 55px; margin-left: -20px; margin-bottom: 8px;" src="theme-assets/images/pcn0- Copy.png" alt="Logo">
+                        <img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="width: 65px; height: 55px; margin-left: -20px; margin-bottom: 8px;" src="theme-assets/images/pcnLOGO.svg" alt="Logo">
                         <p style="margin-left: 45px; margin-top: -50px; color: #fff; font-size: 1.9rem !important;" class="logo-text animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">PCN Protocol</p>
                     </div>
                     <div class="about-text animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
