--- a/faq.html
+++ b/faq.html
@@ -66,7 +66,7 @@
     <header class="page-header">
         <!-- Horizontal Menu Start-->
         <nav class="main-menu static-top navbar-dark navbar navbar-expand-lg fixed-top mb-1"><div class="container">
-      <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="index.html"><img style="width: 170px; height: 70px;" src="theme-assets/images/pcnp1112 - Copy.png" alt="Pcnprotocol Logo"/></a>
+      <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="index.html"><img style="width: 160px; height: 70px;" src="theme-assets/images/pcnp1112 - Copy.png" alt="Pcnprotocol Logo"/></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
@@ -82,7 +82,7 @@
                           <a class="dropdown-item" href="Private-Messenger.html">Private Messenger</a>
                           <a class="dropdown-item" href="Account-Generation.html">Account Generation</a>
                           <a class="dropdown-item" href="Secure-Crypto-Wallet.html">Secure Crypto Wallet</a>
-                          <a class="dropdown-item" href="keygard.html">Keycard</a>
+                          <a class="dropdown-item" href="keygard.html">KeyPass</a>
                           <a class="dropdown-item" href="Web3-Browser.html">Web3 Browser</a>
                           <a class="dropdown-item" href="VPN.html">VPN</a>
                       </div>
@@ -106,8 +106,7 @@
                           <a class="dropdown-item" href="index.html#team">Team</a>
                           <a class="dropdown-item" href="index.html#faq">FAQ</a>
                           <a class="dropdown-item" href="index.html#contact">Contact</a>
-                          <a class="dropdown-item" href="template-404.html">404</a>
-                          <a class="dropdown-item" href="template-inner-page-with-sidebar.html">Sample Page</a>
+                          <a class="dropdown-item" href="jobs.html">Jobs</a>
                       </div>
                   </li>
                   <li class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
@@ -134,7 +133,7 @@
       <div class="content-body">
           <main>
             <section class="faq section-padding" id="faq">
-                <!-- <div id="particles-js"></div> -->
+                <div id="particles-js"></div>
                 <div class="head-content d-flex align-items-center">
                     <!-- aq vwert pirvel seqcias -->
                     <div class="container">
@@ -422,7 +421,7 @@
 			<div class="col-md-4">
 				<div class="about">
 					<div class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">
-						<img style="width: 65px; height: 55px; margin-top: -10px; margin-left: -20px;" src="theme-assets/images/pcn0- Copy.png" alt="Logo">
+						<img style="width: 65px; height: 60px; margin-top: -10px; margin-left: -20px;" src="theme-assets/images/pcnLOGO.svg" alt="Logo">
 						<p style="margin-left: 50px; margin-top: -50px; color: #fff;" class="logo-text">PCN Protocol</p>
 					</div>
 					<div class="about-text animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
