--- a/jobs.html
+++ b/jobs.html
@@ -21,7 +21,8 @@
     <link rel="stylesheet" type="text/css" href="theme-assets/vendors/animate/animate.min.css">
     <link rel="stylesheet" type="text/css" href="theme-assets/vendors/flipclock/flipclock.css">
     <link rel="stylesheet" type="text/css" href="theme-assets/vendors/swiper/css/swiper.min.css">
-    <link rel="stylesheet" href="./theme-assets/css/main.css">
+    <link rel="stylesheet" href="theme-assets/css/Account-Generation.css">
+	<link rel="stylesheet" href="./theme-assets/css/main.css">
     <!-- END VENDOR CSS-->
     <!-- END CRYPTO CSS-->
     <!-- BEGIN Page Level CSS-->
@@ -34,7 +35,6 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- END Custom CSS-->
     <!-- <link rel="stylesheet" href="pri-mess.css">  -->
-    <link rel="stylesheet" href="./theme-assets/css/keygard.css">
     <link rel="manifest" href="/theme-assets/manifest.json">
     <meta name="msapplication-TileColor" content="#4360DF">
     <meta name="msapplication-TileImage" content="/theme-assets/images/ms-icon-144x144.png"> 
@@ -55,6 +55,7 @@
     <meta property="og:title" content="PCNP - private Communication Network Protocol" />
     <meta property="og:description" content="PCNP brings the power of Ethereum into your pocket by combining a messenger, crypto-wallet, and Web3 browser." />
     <meta property="og:url" content="https://PCNP.io/index.html" />
+	<link rel="stylesheet" href="./theme-assets/css/Account-Generation.css">
 
     <!-- aqedam -->
 
@@ -62,27 +63,26 @@
 
   <body class=" 1-column undefined  page-animated svg-wrapper" data-menu-open="hover" data-menu="">
     <!-- Preloader | Comment below code if you don't want preloader-->
-<div id="loader-wrapper">
-    <svg viewbox=" 0 0 512 512" id="loader">
-        <linearGradient id="loaderLinearColors" x1="0" y1="0" x2="1" y2="1">
-            <stop offset="5%" stop-color="#28bcfd"></stop>
-            <stop offset="100%" stop-color="#1d78ff"></stop>
-        </linearGradient>        
-       
-        <circle cx="256" cy="256" r="100" fill="url(#loaderImage)" stroke="none" stroke-width="0" />
-
-        <!-- Change the preloader logo here -->
-        <defs>
-            <pattern id="loaderImage" height="100%" width="100%" patternContentUnits="objectBoundingBox">
-                <image href="theme-assets/images/andoid-icon-192x192.png" preserveAspectRatio="none" width="1" height="1"></image>
-            </pattern>
-        </defs>
-    </svg>
-
-    <div class="loader-section section-left"></div>
-    <div class="loader-section section-right"></div>
-</div>
-
+	<div id="loader-wrapper">
+		<svg viewbox=" 0 0 512 512" id="loader">
+			<linearGradient id="loaderLinearColors" x1="0" y1="0" x2="1" y2="1">
+				<stop offset="5%" stop-color="#28bcfd"></stop>
+				<stop offset="100%" stop-color="#1d78ff"></stop>
+			</linearGradient>        
+			
+			<circle cx="256" cy="256" r="100" fill="url(#loaderImage)" stroke="none" stroke-width="0" />
+	
+			<!-- Change the preloader logo here -->
+			<defs>
+				<pattern id="loaderImage" height="100%" width="100%" patternContentUnits="objectBoundingBox">
+					<image href="theme-assets/images/andoid-icon-192x192.png" preserveAspectRatio="none" width="1" height="1"></image>
+				</pattern>
+			</defs>
+		</svg>
+	
+		<div class="loader-section section-left"></div>
+		<div class="loader-section section-right"></div>
+	</div>
 <nav class="vertical-social" style="position: fixed; top: 0px; left: 0px; right: 0px; overflow: hidden; height: 218.8px;"><div class="midnightHeader default" style="position: absolute; overflow: hidden; inset: 0px; transform: translateY(0%) translateZ(0px);"><div class="midnightInner" style="position: absolute; overflow: auto; inset: 0px; transform: translateY(0%) translateZ(0px);">
     <ul>
         <li><a href="https://www.facebook.com/PCNProtocol/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
@@ -98,10 +98,11 @@
         <li><a href="https://www.youtube.com/channel/UCGkShKklTgRovjWVai_w4OQ" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
     </ul>
 </div></div></nav>
+
     <!-- /////////////////////////////////// HEADER /////////////////////////////////////-->
 
     <!-- Header Start-->
-	<header class="page-header">
+    <header class="page-header">
 		<!-- Horizontal Menu Start-->
 		<nav class="main-menu static-top navbar-dark navbar navbar-expand-lg fixed-top mb-1"><div class="container">
 	  <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="index.html"><img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="width: 160px; height: 70px;" src="theme-assets/images/pcnp1112 - Copy.png" alt="Pcnprotocol Logo"/></a>
@@ -169,136 +170,10 @@
 
       <!-- //////////////////////////////////// CONTAINER ////////////////////////////////////-->
    
-    <main><!-- Header: 3D Animation -->
-     	<!--BROWSER-INTRO-->
-	<section style="margin-top: 90px; margin-left: 30px;" class="pt-16 xl:pt-0">
-		<div id="particles-js"></div>
-		<div class="max-w-screen-2xl mx-auto lg:px-12">
-			<div class="grid md:grid-cols-2">
-				<div class="relative px-8 self-center xl:mb-32">
-					<span class="w-screen absolute -z-1 right-0 h-full"></span>
-					<h1 style="color: #fff;" class="leading-tight font-display text-6xl xl:text-7xl 2xl:text-8xl animated" data-animation="fadeInUpShorter" data-animation-delay="1s">Private & Secure Web3 Browser With Free VPN Service</h1>
-					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl 2xl:text-4xl font-display font-normal leading-normal animated" data-animation="fadeInUpShorter" data-animation-delay="1.2s">
-						Access the latest defi dapps, exchanges, marketplaces, games and more with the Web3 Browser <br>   <br> Soon on
-					</p>
-					<div class="flex items-center -ml-12 mt-12 animated" data-animation="fadeInUpShorter" data-animation-delay="1.2s">
-						<a src="https://apps.apple.com/us/app/PCNP-private-communication/id1178893006" target="_blank" rel="noopener" id="official:ios" class="ml-12 app-download"><img src="theme-assets/images/app-store.svg"></a>
-						<a src="https://play.google.com/store/apps/details?id=im.PCNP.ethereum" target="_blank" rel="noopener" id="official:apk" class="ml-8 xs:ml-4 app-download"><img src="theme-assets/images/google-play.svg"></a>
-						<a src="https://PCNP-im-files.ams3.cdn.digitaloceanspaces.com/PCNPIm-Mobile-v1.14.0-d1a3a2.apk" target="_blank" rel="noopener" id="official:apk" class="ml-8 xs:ml-4 app-download"><img src="theme-assets/images/apk.svg"></a>
-						<a src="https://f-droid.org/packages/im.PCNP.ethereum/" target="_blank" rel="noopener" id="official:fdroid" class="ml-8 xs:ml-4 app-download"><img src="theme-assets/images/fdroid.svg"></a>
-					</div>
-				</div>
-				<div class="relative mt-24 md:mt-0">
-					<div class="md:-mt-24 mx-auto flex justify-center items-center md:block md:pt-20">
-						<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.2s"  src="theme-assets/images/pcn0- Copy.png">
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--END-BROWSER-INTRO-->
-	<!--BROWSER-DEFI-->
-	<section style="margin-left: 30px;" class="mt-12 text-white ">
-		<div class="max-w-screen-2xl mx-auto lg:px-12">
-			<div class="grid md:grid-cols-2 gap-24">
-				<div class="flex flex-col px-8 justify-center items-start md:pt-0 pt-32">
-					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Earn, Save, Exchange with Defi</h3>
-					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Access the growing ecosystem of decentralized financial tools and services all from your mobile phone.</p>
-					<a href="https://dap.ps/discover-dapps/categories/EXCHANGES" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white mt-12 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
-						Explore Defi DApps
-						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right.svg"></span>
-					</a>
-				</div>
-				<div class="px-8">
-					<div class="mx-auto flex justify-center items-center md:block md:pt-20">
-						<img  class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" src="theme-assets/images/browser-defi-2x.png">
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--END-BROWSER-DEFI-->
-	<!--BROWSER-GAMES-->
-	<section class="mt-12">
-		<div class="max-w-screen-2xl mx-auto lg:px-12">
-			<div class="grid md:grid-cols-2 gap-24">
-				<div>
-					<div class="mx-auto flex justify-center items-center md:block lg:pt-48">
-						<img  class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s" src="theme-assets/images/browser-games.svg">
-					</div>
-				</div>
-				<div class="flex flex-col justify-center lg:px-48 px-8 items-start md:pt-0 lg:pt-48 pt-12 order-first md:order-last">
-					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Games, Marketplaces and More</h3>
-					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Play, collect, trade, and browse with all your favorite decentralized applications in one place.</p>
-					<a href="https://dap.ps/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white mt-12 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
-						See all DApps
-						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
-					</a>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--END-BROWSER-GAMES-->
-	<!--BROWSER-COMMUNITY-->
-	<section style="margin-left: 25px;" class="mt-12">
-		<div class="max-w-screen-2xl mx-auto lg:px-12 pb-24 lg:pb-64">
-			<div class="grid md:grid-cols-2 gap-24 lg:pt-48 pt-16">
-				<div class="flex flex-col justify-center lg:xl-48 px-8 items-start md:pt-0">
-					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s" >Community Curated Discovery with Dap.ps</h3>
-					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display animated" data-animation="fadeInUpShorter" data-animation-delay="0.7s">Dap.ps is a third party dapp discovery solution that aims to create a fair, token curated dapp marketplace. Leveraging SNT and token economics, Dap.ps decentralizes the way we explore and find the latest DApps</p>
-					<a style="margin-top: 20px" href="https://our.pcnp.io/how-to-curate-dapps-simply/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white animated" data-animation="fadeInUpShorter" data-animation-delay="0.7s">
-						Learn More
-						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
-					  </a>
-				</div>
-				<div class="mx-auto flex justify-end items-center lg:px-0 px-8">
-					<div class="mx-auto flex justify-end items-center">
-						<img  class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" src="theme-assets/images/browser-community.svg">
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--END-BROWSER-COMMUNITY-->
-	<!--BROWSER-SUBMIT-->
-	<section class="mt-12">
-		<div class="max-w-screen-2xl mx-auto lg:px-12 ">
-			<div class="grid md:grid-cols-8 lg:pt-48 pt-32">
-				<div class="flex flex-col justify-center md:col-start-3 md:col-span-4 lg:xl-48 px-8 items-center md:pt-0">
-					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl text-center animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Want to submit your DApp to Dap.ps for the world to see?</h3>
-					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl text-center font-display animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Follow the instructions at the DApp Integration Center</p>
-					<a href="/developer_tools/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white mt-12 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
-						DApp Integration Center
-						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img  class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.7s" src="theme-assets/images/icon-arrow-right-white.svg"></span>
-					</a>
-				</div>
-			</div>
-		</div>
-		<div class="grid md:grid-cols-1 lg:pt-48 pt-32">
-			<div class="mx-auto flex justify-end items-center lg:px-0 w-full">
-				<div class="mx-auto flex justify-end items-center w-full">
-					<img src="theme-assets/images/browser-logos.svg" class="w-full hidden md:flex">
-		
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--END-BROWSER-SUBMIT-->
-	<!--FAQ-BANNER-->
-	<section>
-		<div class="max-w-screen-2xl mx-auto lg:py-48 lg:px-20">
-			<div class="grid md:grid-cols-1">
-				<div class="flex flex-col justify-center text-white lg:xl-48 px-8 items-center py-32">
-					<h3 class="font-display text-4xl xl:text-5xl 2xl:text-6xl text-center animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Have Questions? Check out the FAQ</h3>
-					<a href="/faq/#browser" target="_blank" class="group inline-flex group items-center  font-semibold font-special mt-12 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
-						Frequently Asked Questions
-						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
-					</a>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--END-FAQ-BANNER-->
+    <main ><!-- Header: 3D Animation -->
+
+    
+
     </main>
  
 	<footer class="footer static-bottom footer-dark footer-custom-class" data-midnight="white"><div class="container">
