--- a/Secure-Crypto-Wallet.html
+++ b/Secure-Crypto-Wallet.html
@@ -121,7 +121,7 @@
 						  <a class="dropdown-item" href="Private-Messenger.html">Private Messenger</a>
 						  <a class="dropdown-item" href="Account-Generation.html">Account Generation</a>
 						  <a class="dropdown-item" href="Secure-Crypto-Wallet.html">Secure Crypto Wallet</a>
-						  <a class="dropdown-item" href="keygard.html">Keycard</a>
+						  <a class="dropdown-item" href="keygard.html">KeyPass</a>
 						  <a class="dropdown-item" href="Web3-Browser.html">Web3 Browser</a>
 						  <a class="dropdown-item" href="VPN.html">VPN</a>
 					  </div>
@@ -145,8 +145,7 @@
 						  <a class="dropdown-item" href="index.html#team">Team</a>
 						  <a class="dropdown-item" href="index.html#faq">FAQ</a>
 						  <a class="dropdown-item" href="index.html#contact">Contact</a>
-						  <a class="dropdown-item" href="template-404.html">404</a>
-						  <a class="dropdown-item" href="template-inner-page-with-sidebar.html">Sample Page</a>
+						  <a class="dropdown-item" href="jobs.html">Jobs</a>
 					  </div>
 				  </li>
 				  <li class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
@@ -175,6 +174,7 @@
      	<!--WALLET-INTRO-->
 	<section style="margin-top: 100px; margin-left: 30px;" id="about" class="pt-16 xl:pt-0">
 		<div class="max-w-screen-2xl mx-auto lg:px-12">
+			<div id="particles-js"></div>
 			<div class="grid md:grid-cols-2">
 				<div class="relative px-8 self-center xl:mb-32">
 					<span class="w-screen absolute -z-1 right-0 h-full"></span>
@@ -344,11 +344,11 @@
 				<div class="col-md-4">
 					<div class="about">
 						<div class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">
-							<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="width: 65px; height: 55px; margin-left: -20px; margin-bottom: 8px;" src="theme-assets/images/pcn0- Copy.png" alt="Logo">
-							<p style="margin-left: 45px; margin-top: -50px; color: #fff; font-size: 1.9rem !important;" class="logo-text">PCN Protocol</p>
+							<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="width: 65px; height: 55px; margin-left: -20px; margin-bottom: 8px;" src="theme-assets/images/pcnLOGO.svg" alt="Logo">
+							<p style="margin-left: 45px; margin-top: -50px; color: #fff; font-size: 1.9rem !important;" class="logo-text animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">PCN Protocol</p>
 						</div>
 						<div class="about-text animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
-							<p style="font-size: 1.3rem !important;" class="grey-accent2">PCN Protocol is a blockchain platform that allows users to make payments, create and request loans and crowdfund projects.</p>
+							<p style="font-size: 1.3rem !important;" class="grey-accent2 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">PCN Protocol is a blockchain platform that allows users to make payments, create and request loans and crowdfund projects.</p>
 						</div>
 						<ul style="font-size: 30px;" class="social-buttons list-unstyled mb-5">
 							<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s"><a style="font-size: 18px;" href="https://www.facebook.com/PCNProtocol/" target="_blank" title="Facebook" class="btn font-medium"><i class="ti-facebook"></i></a></li>
