--- a/security.html
+++ b/security.html
@@ -121,7 +121,7 @@
 						  <a class="dropdown-item" href="Private-Messenger.html">Private Messenger</a>
 						  <a class="dropdown-item" href="Account-Generation.html">Account Generation</a>
 						  <a class="dropdown-item" href="Secure-Crypto-Wallet.html">Secure Crypto Wallet</a>
-						  <a class="dropdown-item" href="keygard.html">Keycard</a>
+						  <a class="dropdown-item" href="keygard.html">KeyPass</a>
 						  <a class="dropdown-item" href="Web3-Browser.html">Web3 Browser</a>
 						  <a class="dropdown-item" href="VPN.html">VPN</a>
 					  </div>
@@ -145,8 +145,7 @@
 						  <a class="dropdown-item" href="index.html#team">Team</a>
 						  <a class="dropdown-item" href="index.html#faq">FAQ</a>
 						  <a class="dropdown-item" href="index.html#contact">Contact</a>
-						  <a class="dropdown-item" href="template-404.html">404</a>
-						  <a class="dropdown-item" href="template-inner-page-with-sidebar.html">Sample Page</a>
+						  <a class="dropdown-item" href="jobs.html">Jobs</a>
 					  </div>
 				  </li>
 				  <li class="dropdown show mr-4 animated" data-animation="fadeInDown" data-animation-delay="1.7s">
@@ -176,6 +175,7 @@
 
     <section style="margin-top: 100px; margin-left: 20px;" id="about" class="pt-16 xl:pt-0">
 		<div class="max-w-screen-2xl mx-auto lg:px-12">
+			<div id="particles-js"></div>
 			<div class="grid md:grid-cols-2">
 				<div class="relative px-8 self-center xl:mb-32">
 					<span class="w-screen absolute -z-1 right-0 h-full"></span>
@@ -236,6 +236,7 @@
 		</div> -->
     <div style="margin-left: 20px;" class="custom-article">
   		<div class="max-w-screen-xl mt-20 lg:mt-64 px-8 lg:px-20">
+			  
   			<h2 class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="color: #fff;">Secure Messaging at PCNP</h2>
   			<div class="grid lg:grid-cols-3 gap-12 lg:gap-24 mt-12 lg:mt-32">
   				<div>
@@ -348,11 +349,11 @@
 				<div class="col-md-4">
 					<div class="about">
 						<div class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">
-							<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="width: 65px; height: 55px; margin-left: -20px; margin-bottom: 8px;" src="theme-assets/images/pcn0- Copy.png" alt="Logo">
-							<p style="margin-left: 45px;  margin-top: -50px; color: #fff; font-size: 1.9rem !important;" class="logo-text">PCN Protocol</p>
+							<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="width: 65px; height: 55px; margin-left: -20px; margin-bottom: 8px;" src="theme-assets/images/pcnLOGO.svg" alt="Logo">
+							<p style="margin-left: 45px; margin-top: -50px; color: #fff; font-size: 1.9rem !important;" class="logo-text animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">PCN Protocol</p>
 						</div>
 						<div class="about-text animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
-							<p style="font-size: 1.3rem !important;" class="grey-accent2 animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">PCN Protocol is a blockchain platform that allows users to make payments, create and request loans and crowdfund projects.</p>
+							<p style="font-size: 1.3rem !important;" class="grey-accent2 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">PCN Protocol is a blockchain platform that allows users to make payments, create and request loans and crowdfund projects.</p>
 						</div>
 						<ul style="font-size: 30px;" class="social-buttons list-unstyled mb-5">
 							<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s"><a style="font-size: 18px;" href="https://www.facebook.com/PCNProtocol/" target="_blank" title="Facebook" class="btn font-medium"><i class="ti-facebook"></i></a></li>
@@ -366,16 +367,16 @@
 				</div>
 				<div class="col-md-4">
 					<div class="links">
-						<h5 style="font-size: 1.9rem ; margin-top: 10px;" class="title animated" data-animation="fadeInUpShorter"  data-animation-delay="0.5s">Useful Links</h5>
-						<ul style="font-size: 1.3rem !important;" class="useful-links float-left mr-5 animated" data-animation="fadeInUpShorter"  data-animation-delay="0.9s">
-							<li class="animated"   data-animation-delay="0.7s"><a href="index.html#about">About</a></li>
-							<li class="animated"   data-animation-delay="0.8s"><a href="index.html#token-sale-mobile-app">Token Sale</a></li>
-							<li class="animated"  data-animation-delay="0.9s"><a href="#index.html#whitepaper">Whitepaper </a></li>
+						<h5 style="font-size: 1.9rem ; margin-top: 10px;" class="title animated"  data-animation-delay="0.5s">Useful Links</h5>
+						<ul style="font-size: 1.3rem !important;" class="useful-links float-left mr-5">
+							<li class="animated"  data-animation-delay="0.6s"><a href="index.html#about">About</a></li>
+							<li class="animated"  data-animation-delay="0.7s"><a href="index.html#token-sale-mobile-app">Token Sale</a></li>
+							<li class="animated"  data-animation-delay="0.8s"><a href="#index.html#whitepaper">Whitepaper </a></li>
 						</ul>
-						<ul style="font-size: 1.3rem !important;" class="useful-links animated " data-animation="fadeInUpShorter"  data-animation-delay="0.5s">
-							<li class="animated"   data-animation-delay="0.6s"><a href="#">Roadmap</a></li>
-							<li class="animated"   data-animation-delay="0.6s"><a href="#">Team</a></li>
-							<li class="animated"   data-animation-delay="0.6s"><a href="#">Sign in</a></li>
+						<ul style="font-size: 1.3rem !important;" class="useful-links">
+							<li class="animated"  data-animation-delay="0.9s"><a href="#">Roadmap</a></li>
+							<li class="animated"  data-animation-delay="1.0s"><a href="#">Team</a></li>
+							<li class="animated"  data-animation-delay="1.1s"><a href="#">Sign in</a></li>
 						</ul>
 					</div>
 				</div>
@@ -390,7 +391,7 @@
 				</div>
 			</div>
 			<div class="copy-right mx-auto text-center">
-				<span style="font-size: 1.3rem !important;" class="copyright">Copyright &copy; 2019, PCN Protocol. Template Designed by <a href="http://pixinvent.com" title="pixinvent" class="white animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Pixinvent</a></span>
+				<span style="font-size: 1.3rem !important;" class="copyright">Copyright &copy; 2019, PCN Protocol. Template Designed by <a href="http://pixinvent.com" title="pixinvent" class="white">Pixinvent</a></span>
 			</div>
 		</div>
 	</div>
