--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" type="text/css" href="theme-assets/vendors/animate/animate.min.css">
     <link rel="stylesheet" type="text/css" href="theme-assets/vendors/flipclock/flipclock.css">
     <link rel="stylesheet" type="text/css" href="theme-assets/vendors/swiper/css/swiper.min.css">
+    <link rel="stylesheet" href="our.css">
     <link rel="stylesheet" href="./theme-assets/css/main2.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <!-- END VENDOR CSS-->
