--- a/jobs.html
+++ b/jobs.html
@@ -176,8 +176,11 @@
 
     </main>
  
-	<footer class="footer static-bottom footer-dark footer-custom-class" data-midnight="white"><div class="container">
+	<footer class="footer static-bottom footer-dark footer-custom-class" data-midnight="white">
+		<div class="container">
+			
 		<div class="footer-wrapper">
+			<div id="particles-js2"></div>
 			<div class="row">
 				<div class="col-md-4">
 					<div class="about">
@@ -230,13 +233,14 @@
 	</div>
 	</footer>
 
-    
+  
 
 
 
 
 
     <!-- BEGIN VENDOR JS-->
+	<script type="text/javascript" src="./src/js/scripts/footerline.js"></script>
     <script src="theme-assets/vendors/vendors.min.js"></script>
     <!-- BEGIN VENDOR JS-->
     <!-- BEGIN PAGE VENDOR JS-->
