--- a/Secure-Crypto-Wallet.html
+++ b/Secure-Crypto-Wallet.html
@@ -338,25 +338,28 @@
 
     </main>
  
-	<footer class="footer static-bottom footer-dark footer-custom-class" data-midnight="white"><div class="container">
+	<footer class="footer static-bottom footer-dark footer-custom-class" data-midnight="white">
+		<div class="container">
+			
 		<div class="footer-wrapper">
-			<div class="row">
+			<div id="particles-js2"></div>
+			<div class="row animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">
 				<div class="col-md-4">
 					<div class="about">
-						<div class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">
-							<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="width: 65px; height: 55px; margin-left: -20px; margin-bottom: 8px;" src="theme-assets/images/pcnLOGO.svg" alt="Logo">
+						<div class="title">
+							<img class="" style="width: 65px; height: 55px; margin-left: -20px; margin-bottom: 8px;" src="theme-assets/images/pcnLOGO.svg" alt="Logo">
 							<p style="margin-left: 45px; margin-top: -50px; color: #fff; font-size: 1.9rem !important;" class="logo-text animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">PCN Protocol</p>
 						</div>
-						<div class="about-text animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
-							<p style="font-size: 1.3rem !important;" class="grey-accent2 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">PCN Protocol is a blockchain platform that allows users to make payments, create and request loans and crowdfund projects.</p>
+						<div class="about-text">
+							<p style="font-size: 1.3rem !important;" class="grey-accent2 ">PCN Protocol is a blockchain platform that allows users to make payments, create and request loans and crowdfund projects.</p>
 						</div>
 						<ul style="font-size: 30px;" class="social-buttons list-unstyled mb-5">
-							<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s"><a style="font-size: 18px;" href="https://www.facebook.com/PCNProtocol/" target="_blank" title="Facebook" class="btn font-medium"><i class="ti-facebook"></i></a></li>
-							<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s"><a style="font-size: 18px;" href="https://twitter.com/PcnProtocol" target="_blank" title="Twitter" class="btn font-medium"><i class="ti-twitter-alt"></i></a></li>
-							<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s"><a style="font-size: 18px;" href="https://www.reddit.com/r/PCNProtocol/" target="_blank" title="Reddit" class="btn font-medium"><i class="ti-reddit"></i></a></li>
-							<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.7s"><a style="font-size: 18px;" href="https://www.youtube.com/channel/UCGkShKklTgRovjWVai_w4OQ" target="_blank" title="Youtube" class="btn font-medium"><i class="fa fa-youtube-play"></i></a></li>
-							<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.8s"><a style="font-size: 18px;" href="https://github.com/PCN-Protocol" target="_blank" title="GitHub" class="btn font-medium"><i class="ti-github"></i></a></li>
-							<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.8s"><a style="font-size: 18px;" href="https://www.instagram.com/pcnprotocol/" target="_blank" title="Instagram" class="btn font-medium"><i class="ti-instagram"></i></a></li>
+							<li class=""><a style="font-size: 18px;" href="https://www.facebook.com/PCNProtocol/" target="_blank" title="Facebook" class="btn font-medium"><i class="ti-facebook"></i></a></li>
+							<li class=""><a style="font-size: 18px;" href="https://twitter.com/PcnProtocol" target="_blank" title="Twitter" class="btn font-medium"><i class="ti-twitter-alt"></i></a></li>
+							<li class=""><a style="font-size: 18px;" href="https://www.reddit.com/r/PCNProtocol/" target="_blank" title="Reddit" class="btn font-medium"><i class="ti-reddit"></i></a></li>
+							<li class=""><a style="font-size: 18px;" href="https://www.youtube.com/channel/UCGkShKklTgRovjWVai_w4OQ" target="_blank" title="Youtube" class="btn font-medium"><i class="fa fa-youtube-play"></i></a></li>
+							<li class=""><a style="font-size: 18px;" href="https://github.com/PCN-Protocol" target="_blank" title="GitHub" class="btn font-medium"><i class="ti-github"></i></a></li>
+							<li class="" data-animation-delay="0.8s"><a style="font-size: 18px;" href="https://www.instagram.com/pcnprotocol/" target="_blank" title="Instagram" class="btn font-medium"><i class="ti-instagram"></i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -364,23 +367,23 @@
 					<div class="links">
 						<h5 style="font-size: 1.9rem ; margin-top: 10px;" class="title animated"  data-animation-delay="0.5s">Useful Links</h5>
 						<ul style="font-size: 1.3rem !important;" class="useful-links float-left mr-5">
-							<li class="animated"  data-animation-delay="0.6s"><a href="index.html#about">About</a></li>
-							<li class="animated"  data-animation-delay="0.7s"><a href="index.html#token-sale-mobile-app">Token Sale</a></li>
-							<li class="animated"  data-animation-delay="0.8s"><a href="#index.html#whitepaper">Whitepaper </a></li>
+							<li class=""><a href="index.html#about">About</a></li>
+							<li class=""><a href="index.html#token-sale-mobile-app">Token Sale</a></li>
+							<li class=""><a href="#index.html#whitepaper">Whitepaper </a></li>
 						</ul>
 						<ul style="font-size: 1.3rem !important;" class="useful-links">
-							<li class="animated"  data-animation-delay="0.9s"><a href="#">Roadmap</a></li>
-							<li class="animated"  data-animation-delay="1.0s"><a href="#">Team</a></li>
-							<li class="animated"  data-animation-delay="1.1s"><a href="#">Sign in</a></li>
+							<li class=""><a href="#">Roadmap</a></li>
+							<li class=""><a href="#">Team</a></li>
+							<li class=""><a href="#">Sign in</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="feed">
-						<h5 style="font-size: 1.9rem !important; margin-top: 10px;" class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.8s">Twitter Feed</h5>
+						<h5 style="font-size: 1.9rem !important; margin-top: 10px;" class="title">Twitter Feed</h5>
 						<div class="tweets">
-							<span style="font-size: 1.3rem !important;" class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.0s">More about our most powerful theme PCN Protocol : https://t.co/JHBAS345</span>
-							<span style="font-size: 1.3rem !important;" class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.2s">More infotamation about CIC Coin : https://t.co/JHSD34JHB</span>
+							<span style="font-size: 1.3rem !important;" class="">More about our most powerful theme PCN Protocol : https://t.co/JHBAS345</span>
+							<span style="font-size: 1.3rem !important;" class="">More infotamation about CIC Coin : https://t.co/JHSD34JHB</span>
 						</div>
 					</div>
 				</div>
@@ -392,13 +395,14 @@
 	</div>
 	</footer>
 
-    
+  
 
 
 
 
 
     <!-- BEGIN VENDOR JS-->
+	<script type="text/javascript" src="./src/js/scripts/footerline.js"></script>
     <script src="theme-assets/vendors/vendors.min.js"></script>
     <!-- BEGIN VENDOR JS-->
     <!-- BEGIN PAGE VENDOR JS-->
