--- a/faq.html
+++ b/faq.html
@@ -416,60 +416,65 @@
   </div>
 
   <footer class="footer static-bottom footer-dark footer-custom-class" data-midnight="white"><div class="container">
-	<div class="footer-wrapper">
-		<div class="row">
-			<div class="col-md-4">
-				<div class="about">
-					<div class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">
-						<img style="width: 65px; height: 60px; margin-top: -10px; margin-left: -20px;" src="theme-assets/images/pcnLOGO.svg" alt="Logo">
-						<p style="margin-left: 50px; margin-top: -50px; color: #fff;" class="logo-text">PCN Protocol</p>
-					</div>
-					<div class="about-text animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
-						<p class="grey-accent2">PCN Protocol is a blockchain platform that allows users to make payments, create and request loans and crowdfund projects.</p>
-					</div>
-					<ul class="social-buttons list-unstyled mb-5">
-						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s"><a href="https://www.facebook.com/PCNProtocol/" target="_blank" title="Facebook" class="btn font-medium"><i class="ti-facebook"></i></a></li>
-						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s"><a href="https://twitter.com/PcnProtocol" target="_blank" title="Twitter" class="btn font-medium"><i class="ti-twitter-alt"></i></a></li>
-						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s"><a href="https://www.reddit.com/r/PCNProtocol/" target="_blank" title="Reddit" class="btn font-medium"><i class="ti-reddit"></i></a></li>
-						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.7s"><a href="https://www.youtube.com/channel/UCGkShKklTgRovjWVai_w4OQ" target="_blank" title="Youtube" class="btn font-medium"><i class="fa fa-youtube-play"></i></a></li>
-						<li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.8s"><a href="https://github.com/PCN-Protocol" target="_blank" title="GitHub" class="btn font-medium"><i class="ti-github"></i></a></li>
-                        <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.8s"><a href="https://www.instagram.com/pcnprotocol/" target="_blank" title="Instagram" class="btn font-medium"><i class="ti-instagram"></i></a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="links">
-					<h5 class="title animated"  data-animation-delay="0.5s">Useful Links</h5>
-					<ul class="useful-links float-left mr-5">
-						<li class="animated"  data-animation-delay="0.6s"><a href="index.html#about">About</a></li>
-						<li class="animated"  data-animation-delay="0.7s"><a href="index.html#token-sale-mobile-app">Token Sale</a></li>
-						<li class="animated"  data-animation-delay="0.8s"><a href="#index.html#whitepaper">Whitepaper </a></li>
-					</ul>
-					<ul class="useful-links">
-						<li class="animated"  data-animation-delay="0.9s"><a href="index.html#roadmap">Roadmap</a></li>
-						<li class="animated"  data-animation-delay="1.0s"><a href="index.html#team">Team</a></li>
-						<li class="animated"  data-animation-delay="1.1s"><a href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html">Sign in</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="feed">
-					<h5 class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.8s">Twitter Feed</h5>
-					<div class="tweets">
-						<span class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.0s">More about our most powerful theme PCN Protocol : https://t.co/JHBAS345</span>
-						<span class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.2s">More infotamation about CIC Coin : https://t.co/JHSD34JHB</span>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="copy-right mx-auto text-center">
-			<span class="copyright">Copyright &copy; 2019, PCN Protocol. Template Designed by <a href="http://pixinvent.com" title="pixinvent" class="white">Pixinvent</a></span>
-		</div>
-	</div>
+    <div class="footer-wrapper">
+        <div id="particles-js2"></div>
+    <div class="row animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">
+        <div class="col-md-4">
+            <div class="about">
+                <div class="title animated">
+                    <img style="width: 65px; height: 60px; margin-top: -10px; margin-left: -20px;" src="theme-assets/images/pcnLOGO.svg" alt="Logo">
+                    <p style="margin-left: 50px; margin-top: -50px; color: #fff;" class="logo-text">PCN Protocol</p>
+                </div>
+                <div class="about-text animated">
+                    <p class="grey-accent2">PCN Protocol is a blockchain platform that allows users to make payments, create and request loans and crowdfund projects.</p>
+                </div>
+                <ul class="social-buttons list-unstyled mb-5">
+                    <li class=""><a href="https://www.facebook.com/PCNProtocol/" target="_blank" title="Facebook" class="btn font-medium"><i class="ti-facebook"></i></a></li>
+                    <li class=""><a href="https://twitter.com/PcnProtocol" target="_blank" title="Twitter" class="btn font-medium"><i class="ti-twitter-alt"></i></a></li>
+                    <li class=""><a href="https://www.reddit.com/r/PCNProtocol/" target="_blank" title="Reddit" class="btn font-medium"><i class="ti-reddit"></i></a></li>
+                    <li class=""><a href="https://www.youtube.com/channel/UCGkShKklTgRovjWVai_w4OQ" target="_blank" title="Youtube" class="btn font-medium"><i class="fa fa-youtube-play"></i></a></li>
+                    <li class=""><a href="https://github.com/PCN-Protocol" target="_blank" title="GitHub" class="btn font-medium"><i class="ti-github"></i></a></li>
+                    <li class=""><a href="https://www.instagram.com/pcnprotocol/" target="_blank" title="Instagram" class="btn font-medium"><i class="ti-instagram"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="links">
+                <h5 class="title">Useful Links</h5>
+                <ul class="useful-links float-left mr-5">
+                    <li class=""><a href="index.html#about">About</a></li>
+                    <li class=""><a href="index.html#token-sale-mobile-app">Token Sale</a></li>
+                    <li class=""><a href="#index.html#whitepaper">Whitepaper </a></li>
+                </ul>
+                <ul class="useful-links">
+                    <li class=""><a href="index.html#roadmap">Roadmap</a></li>
+                    <li class=""><a href="index.html#team">Team</a></li>
+                    <li class=""><a href="https://pixinvent.com/demo/crypto-ico-admin/html/ltr/vertical-menu/account-login.html">Sign in</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="feed">
+                <h5 class="title">Twitter Feed</h5>
+                <div class="tweets">
+                    <span class="">More about our most powerful theme PCN Protocol : https://t.co/JHBAS345</span>
+                    <span class="">More infotamation about CIC Coin : https://t.co/JHSD34JHB</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="copy-right mx-auto text-center">
+        <span class="copyright">Copyright &copy; 2019, PCN Protocol. Template Designed by <a href="http://pixinvent.com" title="pixinvent" class="white">Pixinvent</a></span>
+    </div>
 </div>
-    </footer>
+</div>
+
+
+</footer>
 
      <!-- BEGIN VENDOR JS-->
+     <!-- <script type="text/javascript" src="./src/js/scripts/footerline.js"></script> -->
+     <script src="./src/js/scripts/footerline.js"></script>
      <script src="theme-assets/vendors/vendors.min.js"></script>
      <!-- BEGIN VENDOR JS-->
      <!-- BEGIN PAGE VENDOR JS-->
