--- a/Secure-Crypto-Wallet.html
+++ b/Secure-Crypto-Wallet.html
@@ -4,10 +4,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <meta name="description" content="PCN Protocol is a responsive modern &amp; clean cryptocurrency website landing page html with admin dashboard template , specially created for ICO Startup agencies and digital crypto currency investment website.">
-    <meta name="keywords" content="crypto, ico, cryptocurrency, bitcoin, landing, admin, dashboard, template, modern, clean, responsive">
+    <meta name="keywords" content="crypto, ico, cryptocurrency, bitcoin, landing, admin, dashboard, PCN, modern, clean, responsive">
     <meta name="author" content="PIXINVENT">
-    <title>PCN Protocol - Cryptocurrency Website Landing Page HTML Template</title>
+    <title>PCNP - A Crypto Super Wallet</title>
+    <meta name="description" content="With the secure, non-custodial PCNP Wallet, you are in complete control of your funds." />
     <link rel="apple-touch-icon" href="theme-assets/images/ico/apple-icon-120.png">
     <link rel="shortcut icon" type="image/x-icon" href="theme-assets/images/ico/favicon.ico">
     <!--Google Fonts-->
@@ -26,7 +26,7 @@
     <!-- END VENDOR CSS-->
     <!-- END CRYPTO CSS-->
     <!-- BEGIN Page Level CSS-->
-    <link rel="stylesheet" type="text/css" href="theme-assets/css/template-3d-animation.css">
+    <link rel="stylesheet" type="text/css" href="theme-assets/css/PCN-3d-animation.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/monokai-sublime.min.css">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,600|IBM+Plex+Sans:400,500,700" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
@@ -389,7 +389,7 @@
 				</div>
 			</div>
 			<div class="copy-right mx-auto text-center">
-				<span style="font-size: 1.3rem !important;" class="copyright">Copyright &copy; 2019, PCN Protocol. Template Designed by <a href="http://pixinvent.com" title="pixinvent" class="white">Pixinvent</a></span>
+				<span style="font-size: 1.3rem !important;" class="copyright">Copyright &copy; 2019, PCN Protocol. PCN Designed by <a href="http://pixinvent.com" title="pixinvent" class="white">Pixinvent</a></span>
 			</div>
 		</div>
 	</div>
