--- a/index.html
+++ b/index.html
@@ -1537,7 +1537,8 @@ to the people </h4>
 
    
 
-<footer class="footer static-bottom footer-dark footer-custom-class" data-midnight="white"><div class="container">
+<footer class="footer static-bottom footer-dark footer-custom-class" data-midnight="white">
+    <div class="container">
     <div class="footer-wrapper">
         <div id="particles-js2"></div>
         <div class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">
