--- a/jobs.html
+++ b/jobs.html
@@ -15,7 +15,7 @@
     <!--Font icons-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- BEGIN VENDOR CSS-->
-    <link rel="stylesheet" type="text/css" href="theme-assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="theme-assets/css/bootstrap2.min.css">
     <link rel="stylesheet" type="text/css" href="theme-assets/fonts/themify/style.min.css">
     <link rel="stylesheet" type="text/css" href="theme-assets/fonts/flag-icon-css/css/flag-icon.min.css">
     <link rel="stylesheet" type="text/css" href="theme-assets/vendors/animate/animate.min.css">
@@ -26,7 +26,7 @@
     <!-- END VENDOR CSS-->
     <!-- END CRYPTO CSS-->
     <!-- BEGIN Page Level CSS-->
-    <link rel="stylesheet" type="text/css" href="theme-assets/css/PCN-3d-animation.css">
+    <link rel="stylesheet" type="text/css" href="theme-assets/css/PCN-3d-animation2.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/monokai-sublime.min.css">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,600|IBM+Plex+Sans:400,500,700" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
@@ -102,7 +102,7 @@
     <!-- /////////////////////////////////// HEADER /////////////////////////////////////-->
 
     <!-- Header Start-->
-    <header class="page-header">
+	<header class="page-header">
 		<!-- Horizontal Menu Start-->
 		<nav class="main-menu static-top navbar-dark navbar navbar-expand-lg fixed-top mb-1"><div class="container">
 	  <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="index.html"><img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="width: 160px; height: 70px;" src="theme-assets/images/pcnp1112 - Copy.png" alt="Pcnprotocol Logo"/></a>
@@ -111,9 +111,9 @@
 	  </button>
 	  <div class="collapse navbar-collapse" id="navbarCollapse">
 		  <div style="font-size: inherit;" id="navigation" class="navbar-nav ml-auto">
-			  <ul class="navbar-nav mt-1">
+			  <ul style="font-size: 15.008px;" class="navbar-nav mt-1">
 				  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.1s">
-					  <a class="nav-link" href="index.html#about">About</a>
+					  <a style="font-size: 12.8px;" class="nav-link" href="index.html#about">About</a>
 				  </li>
 				  <li class="dropdown show mr-2 px-2 animated" data-animation="fadeInDown" data-animation-delay="1.6s">
 					  <a class="dropdown-toggle white" href="index.html#problem-solution" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >Features</a>
