--- a/faq.html
+++ b/faq.html
@@ -451,7 +451,8 @@
       </div>
   </div>
 
-  <footer class="footer static-bottom footer-dark footer-custom-class" data-midnight="white"><div class="container">
+  <footer class="footer static-bottom footer-dark footer-custom-class" data-midnight="white">
+    <div class="container">
     <div class="footer-wrapper">
         <div id="particles-js2"></div>
         <div class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">
@@ -461,7 +462,7 @@
     <div class="row">
         <div class="col-md-2">
             <div class="links">
-                <h5 style="font-size: 1.15rem;"  class="title animated"  data-animation-delay="0.5s">Useful Links</h5>
+                <h5 style="font-size: 18.4px;"  class="title animated"  data-animation-delay="0.5s">Useful Links</h5>
                 <ul class="useful-links">
                     <li class="animated"  data-animation-delay="0.9s"><a href="index.html#roadmap">Roadmap</a></li>
                     <li class="animated"  data-animation-delay="1.0s"><a href="index.html#team">Team</a></li>
@@ -471,7 +472,7 @@
         </div>
         <div class="col-md-2">
             <div class="links">
-                <h5 style="font-size: 1.15rem;"  class="title animated"  data-animation-delay="0.5s">PCNP</h5>
+                <h5 style="font-size: 18.4px;"  class="title animated"  data-animation-delay="0.5s">PCNP</h5>
                 <ul class="useful-links float-left mr-5">
                     <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s"><a href="get-involved.html" target="_blank">Get Involved</a></li>
                     <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s"><a href="security.html" target="_blank">About</a></li>
@@ -482,7 +483,7 @@
         </div>
         <div class="col-md-2">
             <div class="links">
-                <h5 style="font-size: 1.15rem;"  class="title animated"  data-animation-delay="0.5s">Product</h5>
+                <h5 style="font-size: 18.4px;"  class="title animated"  data-animation-delay="0.5s">Product</h5>
                 <ul class="useful-links float-left mr-5">
                     <li class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s"><a href="form.html" target="_blank">Features</a></li>
                     <li class="animated"  data-animation-delay="0.7s"><a href="security.html">Security</a></li>
@@ -494,7 +495,7 @@
 
         <div class="col-md-2">
             <div class="links">
-                <h5 style="font-size: 1.15rem;"  class="title animated"  data-animation-delay="0.5s">PCNP Network</h5>
+                <h5 style="font-size: 18.4px;"  class="title animated"  data-animation-delay="0.5s">PCNP Network</h5>
                 <ul class="useful-links float-left mr-5">
                     <li class="animated"  data-animation-delay="0.6s"><a href="https://keycard.tech/" target="_blank">Keycard</a></li>
                     <li class="animated"  data-animation-delay="0.7s"><a href="https://assemble.fund/" target="_blank">Assemble</a></li>
@@ -507,7 +508,7 @@
 
         <div class="col-md-4">
             <div class="feed">
-                <h5 style="font-size: 1.15rem;"  class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.8s">Twitter Feed</h5>
+                <h5 style="font-size: 18.4px;"  class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.8s">Twitter Feed</h5>
                 <div class="tweets">
                     <span class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.0s">More about our most powerful theme PCN Protocol : https://t.co/JHBAS345</span>
                     <span class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.2s">More infotamation about CIC Coin : https://t.co/JHSD34JHB</span>
@@ -551,7 +552,7 @@
 
             <div style=" text-align: right;" class="col-md-4">
                 <div style="display: inline-block;">
-                    <ul style="font-size: 0.75rem;" class="">
+                    <ul style="font-size: 12px;" class="">
                         <li style="display: inline-block; margin-right: 5px; animation-delay: 0.5s; opacity: 0;" class="animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.5s"><a href="#" title="Twitter" class="">Privacy Policy</a></li>
                         <li style="display: inline-block;">•</li>
                         <li style="display: inline-block; margin-left: 5px; animation-delay: 0.6s; opacity: 0;" class="animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.6s"><a href="#" title="LinkedIn" class="">Terms of Use</a></li>
