--- a/index.html
+++ b/index.html
@@ -1593,12 +1593,15 @@ to the people </h4>
         </div>
 
         <div class="col-md-4">
-            <div class="feed">
-                <h5 style="font-size: 18.4px;"  class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.8s">Twitter Feed</h5>
-                <div class="tweets">
-                    <span class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.0s">More about our most powerful theme PCN Protocol : https://t.co/JHBAS345</span>
-                    <span class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.2s">More infotamation about CIC Coin : https://t.co/JHSD34JHB</span>
-                </div>
+            <div class="jss114">
+                <div class="jss132">Sign-up for our daily newsletter</div>
+                <form action="https://messari.us17.list-manage.com/subscribe/post?u=5b89525c77acdd986027c25d1&amp;id=72c535a8a8" class="jss128" method="POST" target="_blank">
+                    <input aria-hidden="true" class="jss129" name="b_5b89525c77acdd986027c25d1_72c535a8a8" tabindex="-1" type="text" value="">
+                    <div class="MuiInputBase-root MuiFilledInput-root jss133 jss126 MuiInputBase-fullWidth" aria-required="true">
+                        <input style="padding-top: 12px; padding-bottom: 12px; margin-left: 15px; border-radius: 0px 4px 4px 0;" name="EMAIL" placeholder="Email Address" type="email" class="MuiInputBase-input MuiFilledInput-input jss134 jss125" value="">
+                    </div>
+                    <button style="border-radius: 0 4px 4px 0;" class="MuiButtonBase-root MuiButton-root MuiButton-contained jss124 MuiButton-containedPrimary MuiButton-disableElevation" tabindex="0" type="submit"><span class="MuiButton-label">Subscribe</span><span class="MuiTouchRipple-root"></span></button>
+                </form>
             </div>
         </div>
         </div>
