--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </head>
   <body class=" 1-column undefined  page-animated svg-wrapper" data-menu-open="hover" data-menu="">
     <!-- Preloader | Comment below code if you don't want preloader-->
-<div id="loader-wrapper">
+<!-- <div id="loader-wrapper">
    
    
     <video id="loader-video"  autoplay muted>
@@ -62,7 +62,7 @@
 
     <div class="loader-section section-left"></div>
     <div class="loader-section section-right"></div> --> 
-</div>
+</div> -->
 <!--/ Preloader --><nav class="vertical-social">
     <ul>
         <li><a href="https://www.facebook.com/PCNProtocol/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
